# gitguard

./: .dockerignore  .gitignore  NOTICE  README.md  TODO.md  compose.yaml  pyproject.toml
.branch_logs/: feat__branch-log-auto-restore.md  feat__license-agpl.md  feat__split-runtime-hook-modules.md  feat__update-git-guard-policy.md
.codex/skills/git-flow-policy-writer/: SKILL.md
.codex/skills/git-guard-policy-writer/: SKILL.md
.git-flow-guard/: contribution.md  enable.sh  policy.json
.git-flow-guard/hooks/: pre-push  reference-transaction
.git-flow-guard/runtime/: policy_reference_transaction_hook.py
.git-guard/: config.json  contribution.md  enable.sh  policy.json
.git-guard/hooks/: common.sh  pre-commit  pre-push  reference-transaction
.git-guard/runtime/: branch_policy.py  policy_reference_transaction_hook.py
configs/: README.md  __init__.py  test_base.py
configs/basic-feature-release/: contribution.md  policy.yaml  test_case.py
configs/dev-feat/: test_case.py
configs/dev-feat-case/: test_case.py
configs/dev-feat-release-hotfix/: contribution.md  test_case.py
configs/dev-feat-release-hotfix-case/: contribution.md  test_case.py
configs/dev-infra-feat-release-hotfix/: contribution.md  test_case.py
configs/dev-infra-feat-release-hotfix-case/: contribution.md  test_case.py
configs/dev-main-release/: test_case.py
configs/dev-only/: contribution.md  test_case.py
configs/dev-release/: contribution.md  test_case.py
configs/dev-release_slack/: contribution.md  test_case.py
configs/infra-feat-release/: contribution.md  policy.yaml  test_case.py
skills/git-flow-policy-writer/: SKILL.md
skills/git-flow-policy-writer/agents/: openai.yaml
src/: cli.py  install.py  mermaid.py
src/git_flow_guard/: __init__.py  cli.py  generate.py  install.py  mermaid.py
src/runtime/: reference_transaction_hook.py
test_env/: Dockerfile  README.md  run_policy_hook_tests.py
(+2 files in other folders)
