[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-guard"
version = "0.1.0"
description = "Generate and enforce Git branch-flow policies from Mermaid gitGraph documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "git-guard contributors" }
]
dependencies = []

[project.scripts]
git-guard = "cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["cli", "install", "mermaid"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["runtime"]
